<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">*</string>
    <string name="divide">/</string>
    <string name="double_zero">00</string>
    <string name="result">=</string>
    <string name="clear">AC</string>
    <string name="percent">%</string>
    <string name="delete_one"><![CDATA[<-]]></string>
    <string name="plus_minus">±</string>

    <string name="result_template">%s%s</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="choose_theme">Выберите тему</string>
    <string name="ligth_theme">Светлая тема</string>
    <string name="dark_theme">Темная тема</string>
    <string name="settings">Settings</string>
    <string name="light_theme">Светлая тема</string>
</resources>